# effective_robotics_programming_with_ros

./: README.md  contributors.txt
chapter10_tutorials/: CMakeLists.txt  package.xml
chapter2_tutorials/: CMakeLists.txt  package.xml
chapter2_tutorials/cfg/: chapter2.cfg
chapter2_tutorials/launch/: chapter2.launch
chapter3_tutorials/: CMakeLists.txt  package.xml
chapter3_tutorials/cfg/: DynamicParam.cfg
chapter3_tutorials/launch/: example9.launch
chapter3_tutorials/src/: example10.cpp
chapter4_tutorials/chapter4_tutorials/: CMakeLists.txt  package.xml
chapter4_tutorials/robot1_description/: package.xml
chapter4_tutorials/robot1_description/urdf/: robot1_base_04.xacro~
chapter4_tutorials/robot1_gazebo/: package.xml
chapter4_tutorials/robot1_gazebo/launch/: gazebo.launch~  gazebo_wg.launch~
chapter5_tutorials/: CMakeLists.txt  package.xml
chapter5_tutorials/launch/: gazebo_map_robot.launch  gazebo_mapping_robot.launch
chapter6_tutorials/: CMakeLists.txt  package.xml
chapter7_tutorials/: LICENSE  README.md
chapter7_tutorials/chapter7_tutorials/: package.xml
chapter7_tutorials/rosbook_arm_bringup/: package.xml
chapter7_tutorials/rosbook_arm_bringup/launch/: rosbook_arm_bringup.launch
chapter7_tutorials/rosbook_arm_controller_configuration/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_controller_configuration_gazebo/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_description/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_description/robots/: rosbook_arm_base.urdf.xacro  rosbook_arm_rgbd.urdf.xacro  upload_rosbook_arm.launch
chapter7_tutorials/rosbook_arm_description/urdf/: deg_to_rad.xacro  inertia.xacro
chapter7_tutorials/rosbook_arm_description/urdf/arm/: arm.urdf.xacro
chapter7_tutorials/rosbook_arm_description/urdf/base/: base.urdf.xacro
chapter7_tutorials/rosbook_arm_description/urdf/gripper/: gripper.urdf.xacro
chapter7_tutorials/rosbook_arm_description/urdf/sensors/: xtion_pro_live.urdf.xacro
chapter7_tutorials/rosbook_arm_gazebo/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_hardware_gazebo/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_moveit_config/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_moveit_config/launch/: move_group.launch  planning_context.launch  trajectory_execution.launch.xml
chapter7_tutorials/rosbook_arm_pick_and_place/: CMakeLists.txt  package.xml
chapter7_tutorials/rosbook_arm_pick_and_place/launch/: grasp_generator_server.launch
chapter7_tutorials/rosbook_arm_pick_and_place/scripts/: pick_and_place.py
chapter7_tutorials/rosbook_arm_snippets/: CMakeLists.txt  package.xml
chapter8_tutorials/: CMakeLists.txt  package.xml
chapter8_tutorials/config/: config.rviz  robot_localization.yaml
chapter8_tutorials/launch/: chapter8_laserscan.launch  chapter8_robot_enocoders.launch  chapter8_robot_imu.launch  chapter8_robot_with_motors.launch  chapter8_robot_with_odom.launch  chapter8_teleop_joy.launch  robot_localization.launch
chapter8_tutorials/src/: c8_dynamixel.cpp  c8_kinect.cpp  c8_laserscan.cpp  c8_odom.cpp  c8_odom_encoders.cpp  c8_odom_imu.cpp  c8_teleop_joy.cpp
chapter8_tutorials/src/c8_arduino_string/: c8_arduino_string.ino
chapter8_tutorials/src/c8_robot_with_motors/: c8_robot_with_motors.ino
chapter8_tutorials/src/c8_robot_with_motors_and_encoders/: c8_robot_with_motors_and_encoders.ino
chapter8_tutorials/src/c8_robot_with_motors_and_encoders_w_twist/: c8_robot_with_motors_and_encoders_w_twist.ino
chapter8_tutorials/src/c8_robot_with_motors_w_twist/: c8_robot_with_motors_w_twist.ino
chapter8_tutorials/urdf/: robot2.urdf
chapter9_tutorials/: CMakeLists.txt  package.xml
chapter9_tutorials/cfg/: Camera.cfg  CameraStereo.cfg  Homography.cfg
chapter9_tutorials/config/: chapter7_tutorials.config
chapter9_tutorials/config/camera/: webcam.yaml
chapter9_tutorials/config/camera_stereo/: logitech_c120.yaml
chapter9_tutorials/config/firewire_camera/: format7_mode0.yaml
chapter9_tutorials/config/gscam/: calibration_gscam.yaml  logitech.yaml
chapter9_tutorials/launch/: camera.launch  camera_polling.launch  camera_stereo.launch  camera_timer.launch  firewire_camera.launch  fovis_demo.launch  gscam.launch  homography.launch  openni_kinect_hw_registered.launch  openni_kinect_no_registered.launch  openni_kinect_sw_registered.launch  viso2_demo.launch
chapter9_tutorials/launch/calibration/: calibration_camera_chessboard.launch  calibration_camera_stereo_chessboard.launch  calibration_firewire_camera_acircles.launch  calibration_firewire_camera_chessboard.launch  calibration_firewire_camera_circles.launch  calibration_gscam_chessboard.launch
chapter9_tutorials/launch/visual_odometry/: viso2_mono_odometer.launch  viso2_stereo_odometer.launch
chapter9_tutorials/src/: camera.cpp  camera_stereo.cpp  camera_timer.cpp  homography.cpp
