<?xml version="1.0"?>
<package format="2">
  <name>chapter3_tutorials</name>
  <version>0.1.0</version>
  <description>Chapter 3 tutorials.</description>

  <maintainer email="anil.mmm@gmail.com">Anil Mahtani</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="luis.sc@subseamechatronics.com">Luis Sanchez</maintainer>
  <maintainer email="aaron.mr@subseamechatronics.com">Aaron Martinez</maintainer>

  <author email="anil.mmm@gmail.com">Anil Mahtani</author>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>
  <author email="luis.sc@subseamechatronics.com">Luis Sanchez</author>
  <author email="aaron.mr@subseamechatronics.com">Aaron Martinez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>cv_bridge</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>interactive_markers</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
