<?xml version="1.0"?>
<package format="2">
  <name>rosbook_arm_controller_configuration</name>
  <version>0.1.0</version>
  <description>ROS book arm controller configuration</description>

  <maintainer email="anil.mmm@gmail.com">Anil Mahtani</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="luis.sc@subseamechatronics.com">Luis Sanchez</maintainer>
  <maintainer email="aaron.mr@subseamechatronics.com">Aaron Martinez</maintainer>

  <author email="anil.mmm@gmail.com">Anil Mahtani</author>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>
  <author email="luis.sc@subseamechatronics.com">Luis Sanchez</author>
  <author email="aaron.mr@subseamechatronics.com">Aaron Martinez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
</package>
