<?xml version="1.0"?>
<package format="2">
  <name>rosbook_arm_hardware_gazebo</name>
  <version>0.1.0</version>
  <description>ROS book hardware for gazebo simulation</description>

  <maintainer email="anil.mmm@gmail.com">Anil Mahtani</maintainer>
  <maintainer email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</maintainer>
  <maintainer email="luis.sc@subseamechatronics.com">Luis Sanchez</maintainer>
  <maintainer email="aaron.mr@subseamechatronics.com">Aaron Martinez</maintainer>

  <author email="anil.mmm@gmail.com">Anil Mahtani</author>
  <author email="enrique.fernandez.perdomo@gmail.com">Enrique Fernandez</author>
  <author email="luis.sc@subseamechatronics.com">Luis Sanchez</author>
  <author email="aaron.mr@subseamechatronics.com">Aaron Martinez</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>

  <depend>roscpp</depend>
  <depend>angles</depend>
  <depend>control_toolbox</depend>
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/rosbook_arm_hardware_gazebo_plugins.xml"/>
  </export>
</package>
